@@ -1,22 +1,34 @@
-! Do not configure sys (TAP/TUN) or mesh (ethX, wlanX, ...) interfaces
-! in this file. Use /etc/default/des-aodv or dpkg-reconfigure des-aodv.
+! Do not configure sys (TAP/TUN) or mesh (ethX, wlanX, ...) interfaces in this file. Use /etc/default/des-aodv or dpkg-reconfigure des-aodv.
 ! Your changes to this file will be overwritten.
 
-set hello_size 130
-set hello_interval 1000
-set rreq_size 200
+! set in verbose mode
+set verbose 0
+
+! set whether aodv multipath variant should be used
+set multipath 0
+
+! set size of HELLO packet
+set hello_size 128
+
+! set interval between two HELLO packets
+set hello_interval 2000
+
+! set size of RREQ packet
+set rreq_size 128
+
+! disable stderr logging
 no logging stderr
+
+! set logging ringbuffer size
 logging ringbuffer 20
+
+! set loglevel [(d)ebug, (i)nfo, (n)otice, (w)arning, (e)rror, (c)ritical, e(m)ergency]
 loglevel info
 
-! set in verbose mode
-! set verbose 1
-
 ! set path to routing-log file.
-! FORMAT:
-!	[source_mac_addr]\t[destination_mac_addr]\t[packet_seq_num]\t[hop_coung]\t[incomming_iface_name]\t[outgoing_iface_name]\t[iface_addr_of_next_hop]
+! FORMAT: [source_mac_addr]\t[destination_mac_addr]\t[packet_seq_num]\t[hop_coung]\t[incomming_iface_name]\t[outgoing_iface_name]\t[iface_addr_of_next_hop]
 ! Note that the packet is unique identified over the combination of (source_mac_addr,destination_mac_addr,packet_seq_num)
 ! and the sequence number of packet send by destination to source is max(packet_seq_num_dest, "packet_seq_num_src + 1", 
 ! where packet_seq_num_src is last seq_number of packet sent by source to destination. 
 ! ATTENTION: Upon activation slightly reduces daemon performance!
-! set routinglog /var/log/des-aodv-routing.log
+! set routing_log /var/log/des-aodv-routing.log
